--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,3 @@
 ATLAS_URI = mongodb+srv://bourgogneolivier:Madstick.1@cluster0.5oocw8k.mongodb.net/comski-social?retryWrites=true&w=majority&appName=Cluster0
+
+JWT_SECRET_KEY=22
