--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "css": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-input-emoji": "^5.6.6",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
     "tailwind": "^4.0.0"
