--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-input-emoji": "^5.6.6",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
+    "socket.io-client": "^4.7.4",
     "tailwind": "^4.0.0"
   },
   "devDependencies": {
