--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,15 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
+    "@types/socket.io-client": "^3.0.0",
     "css": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-input-emoji": "^5.6.6",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
-    "socket.io-client": "^4.7.4",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "tailwind": "^4.0.0"
   },
   "devDependencies": {
