--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-input-emoji": "^5.8.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
+    "redux-persist": "^6.0.0",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
     "tailwind": "^4.0.0"
@@ -30,12 +31,12 @@
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.17",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
     "vite": "^5.1.4"
   }
