:construction_worker: add build logic

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -5,6 +5,11 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "types": ["jest", "@testing-library/jest-dom"],
+    "baseUrl": ".",
+    "paths": {
+      "msw": ["node_modules/msw"]
+    },
 
     /* Bundler mode */
     "moduleResolution": "bundler",
