--- a/client/package.json
+++ b/client/package.json
@@ -1,43 +1,58 @@
-{
-  "name": "client",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@reduxjs/toolkit": "^2.2.1",
-    "@types/socket.io-client": "^3.0.0",
-    "css": "^3.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1",
-    "react-input-emoji": "^5.8.0",
-    "react-redux": "^9.1.0",
-    "react-router-dom": "^6.22.2",
-    "redux-persist": "^6.0.0",
-    "socket.io": "^4.7.5",
-    "socket.io-client": "^4.7.5",
-    "tailwind": "^4.0.0"
-  },
-  "devDependencies": {
-    "@tailwindcss/forms": "^0.5.7",
-    "@types/react": "^18.2.56",
-    "@types/react-dom": "^18.2.19",
-    "@typescript-eslint/eslint-plugin": "^7.0.2",
-    "@typescript-eslint/parser": "^7.0.2",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.56.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.2.2",
-    "vite": "^5.1.4"
+  {
+    "name": "client",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+      "test": "vitest",
+      "dev": "vite",
+      "build": "tsc && vite build",
+      "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+      "preview": "vite preview"
+    },
+    "dependencies": {
+      "@reduxjs/toolkit": "^2.2.1",
+      "@types/socket.io-client": "^3.0.0",
+      "amqplib": "^0.10.4",
+      "css": "^3.0.0",
+      "express": "^4.19.2",
+      "jsonwebtoken": "^9.0.2",
+      "lodash": "^4.17.21",
+      "moment": "^2.30.1",
+      "msw": "^2.2.13",
+      "react": "^18.2.0",
+      "react-dom": "^18.2.0",
+      "react-icons": "^5.0.1",
+      "react-input-emoji": "^5.8.0",
+      "react-redux": "^9.1.0",
+      "react-router-dom": "^6.22.2",
+      "redux-persist": "^6.0.0",
+      "socket.io": "^4.7.5",
+      "socket.io-client": "^4.7.5",
+      "tailwind": "^4.0.0"
+    },
+    "devDependencies": {
+      "@tailwindcss/forms": "^0.5.7",
+      "@testing-library/jest-dom": "^6.4.2",
+      "@testing-library/react": "^15.0.2",
+      "@testing-library/user-event": "^14.5.2",
+      "@types/react": "^18.2.56",
+      "@types/react-dom": "^18.2.19",
+      "@typescript-eslint/eslint-plugin": "^7.0.2",
+      "@typescript-eslint/parser": "^7.0.2",
+      "@vitejs/plugin-react": "^4.2.1",
+      "autoprefixer": "^10.4.19",
+      "eslint": "^8.56.0",
+      "eslint-plugin-react-hooks": "^4.6.0",
+      "eslint-plugin-react-refresh": "^0.4.5",
+      "identity-obj-proxy": "^3.0.0",
+      "jsdom": "^24.0.0",
+      "postcss": "^8.4.38",
+      "tailwindcss": "^3.4.3",
+      "ts-node": "^10.9.2",
+      "typescript": "^5.2.2",
+      "vite": "^5.2.9",
+      "vite-tsconfig-paths": "^4.3.2",
+      "vitest": "^1.5.0"
+    }
   }
-}
