--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
-ATLAS_URI = mongodb+srv://bourgogneolivier:Madstick.1@cluster0.5oocw8k.mongodb.net/comski-social?retryWrites=true&w=majority&appName=Cluster0
-
+# Server side .env
+ATLAS_URI=mongodb+srv://bourgogneolivier:Madstick.1@cluster0.5oocw8k.mongodb.net/comski-social?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET_KEY=22
+frontEND_URL=https://broski-social-chat.onrender.com
